[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Bounds.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 100, 0.5, 0.5 )

[node name="Bounds" type="Spatial"]
script = ExtResource( 1 )

[node name="TopWall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="CollisionShape" type="CollisionShape" parent="TopWall"]
shape = SubResource( 1 )

[node name="BottomWall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="CollisionShape" type="CollisionShape" parent="BottomWall"]
shape = SubResource( 1 )

[node name="LeftWall" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="LeftWall"]
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RightWall"]
shape = SubResource( 1 )
